[gd_scene load_steps=5 format=3 uid="uid://bwh1q5jneoqrp"]

[ext_resource type="Script" path="res://scripts/Objects/item.gd" id="1_30w5q"]
[ext_resource type="PackedScene" uid="uid://deq64u7fghh4g" path="res://scenes/UI/Icon_old.tscn" id="1_b0lys"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_cbxti"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_yoywj"]
radius = 31.0161

[node name="Item" type="Node2D" groups=["Items"]]
script = ExtResource("1_30w5q")

[node name="TextureButton" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = SubResource("PlaceholderTexture2D_cbxti")

[node name="Vicinity" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vicinity"]
shape = SubResource("CircleShape2D_yoywj")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(0, -28)
remote_path = NodePath("../Ui/Icon")
update_rotation = false
update_scale = false

[node name="Ui" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Icon" parent="Ui" instance=ExtResource("1_b0lys")]
visible = false
position = Vector2(0, -28)

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="body_entered" from="Vicinity" to="." method="_on_vicinity_body_entered"]
[connection signal="body_exited" from="Vicinity" to="." method="_on_vicinity_body_exited"]
